  `max_height` or the calculated height is reached.
• |vim.secure.read()| now returns `true` for trusted directories. Previously
  it would return `nil`, which made it impossible to tell if the directory was
  actually trusted.
• Added |vim.lsp.is_enabled()| to check if a given LSP config has been enabled
  by |vim.lsp.enable()|.
• |nvim_echo()| can set the |ui-messages| kind with which to emit the message.
• |nvim_ui_send()| writes arbitrary data to a UI's stdout. Use this to write
  escape sequences to the terminal when Nvim is running in the |TUI|.

BUILD

• A Zig-based build system has been added as an alternative to CMake. It is
  currently limited in functionality, and CMake remains the recommended option
  for the time being.

DEFAULTS

• 'statusline' default is exposed as a statusline expression (previously it
  was implemented as an internal C routine).
• 'statusline' includes |vim.diagnostic.status()|
• Project-local configuration ('exrc') is also loaded from parent directories.
  Unset 'exrc' to stop further search.
• Mappings:
  • |grt| in Normal mode maps to |vim.lsp.buf.type_definition()|

DIAGNOSTICS

• |vim.diagnostic.setloclist()| and |vim.diagnostic.setqflist()| now support a
  `format` function to modify (or filter) diagnostics before being set in the
  location/quickfix list.
• |vim.diagnostic.get()| now accepts an `enabled` filter to only return
  enabled or disabled diagnostics.
• |vim.diagnostic.status()| returns a formatted string with current buffer
  diagnostics

EDITOR

• |:iput| works like |:put| but adjusts indent.
• |:retab| accepts new optional parameter -indentonly to only change leading
  whitespace in indented lines.
• |:uniq| deduplicates text in the current buffer.
• |omnicompletion| in `help` buffer. |ft-help-omni|
• Setting "'0" in 'shada' prevents storing the jumplist in the shada file.
• 'shada' now correctly respects "/0" and "f0".
• |prompt-buffer| supports multiline input/paste, undo/redo, and o/O normal
  commands.