@@ -659,6 +659,7 @@ nvim_echo({chunks}, {history}, {opts})                           *nvim_echo()*
                    (optional) name or ID `hl_group`.
       • {history}  (`boolean`) if true, add to |message-history|.
       • {opts}     (`vim.api.keyset.echo_opts`) Optional parameters.
+                   • id: message-id for updating existing message.
                    • err: Treat the message like `:echoerr`. Sets `hl_group`
                      to |hl-ErrorMsg| by default.
                    • kind: Set the |ui-messages| kind with which this message
@@ -666,6 +667,20 @@ nvim_echo({chunks}, {history}, {opts})                           *nvim_echo()*
                    • verbose: Message is controlled by the 'verbose' option.
                      Nvim invoked with `-V3log` will write the message to the
                      "log" file instead of standard output.
+                   • title: The title for progress message.
+                   • status: Current status of the progress message. Can be
+                     one of the following values
+                     • success: The progress item completed successfully
+                     • running: The progress is ongoing
+                     • failed: The progress item failed
+                     • cancel: The progressing process should be canceled.
+                               note: Cancel needs to be handled by progress
+                               initiator by listening for the `Progress` event
+                   • percent: How much progress is done on the progress
+                     message
+
+    Return: ~
+        (`integer`) The message-id of the message.
 
 nvim_eval_statusline({str}, {opts})                   *nvim_eval_statusline()*
     Evaluates statusline string.
