@@ -1104,6 +1104,7 @@ function vim.api.nvim_del_var(name) end
 --- - kind: Set the `ui-messages` kind with which this message will be emitted.
 --- - verbose: Message is controlled by the 'verbose' option. Nvim invoked with `-V3log`
 ---   will write the message to the "log" file instead of standard output.
+--- @return integer
 function vim.api.nvim_echo(chunks, history, opts) end
 
 --- @deprecated
