@@ -233,6 +233,10 @@ error('Cannot require a meta file')
 --- @field err? boolean
 --- @field verbose? boolean
 --- @field kind? string
+--- @field id? integer
+--- @field title? string
+--- @field status? string
+--- @field percent? integer
 
 --- @class vim.api.keyset.empty
 
